<resources>
    <string name="app_name">CurrencyExchangerExample</string>
    <string name="currency_converter_title">Currency converter</string>
    <string name="currency_exchange_tittle">Currency exchange</string>
    <string name="buy_currency">Buy</string>
    <string name="sell_currency">Sell</string>
    <string name="balance">Balance</string>
    <string name="submit">Submit</string>
    <string name="exchange_success_message">You have converted %1$f %2$s to %3$f %4$s. Commission Fee - %5$f %6$s.</string>
</resources>